src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_glu_backward_jvp(value grad_x, value grad_glu, value x, value dgrad_glu, value dx, int64_t dim);
value atg_glu_backward_jvp_out(value out, value grad_x, value grad_glu, value x, value dgrad_glu, value dx, int64_t dim);
value atg_glu_jvp(value glu, value x, value dx, int64_t dim);
value atg_glu_jvp_out(value out, value glu, value x, value dx, int64_t dim);
value atg_glu_out(value out, value self, int64_t dim);
value atg_grad(value self);
value atg_greater(value self, value other);
value atg_greater_(value self, value other);
value atg_greater_equal(value self, value other);
value atg_greater_equal_(value self, value other);
value atg_greater_equal_scalar_out(value out, value self, value other);
value atg_greater_equal_tensor(value self, value other);
value atg_greater_equal_tensor_(value self, value other);
value atg_greater_equal_tensor_out(value out, value self, value other);
value atg_greater_scalar_out(value out, value self, value other);
value atg_greater_tensor(value self, value other);
value atg_greater_tensor_(value self, value other);
value atg_greater_tensor_out(value out, value self, value other);
value atg_grid_sampler(value input, value grid, int64_t interpolation_mode, int64_t padding_mode, int align_corners);
value atg_grid_sampler_2d(value input, value grid, int64_t interpolation_mode, int64_t padding_mode, int align_corners);
value atg_grid_sampler_2d_out(value out, value input, value grid, int64_t interpolation_mode, int64_t padding_mode, int align_corners);
value atg_grid_sampler_3d(value input, value grid, int64_t interpolation_mode, int64_t padding_mode, int align_corners);
value atg_grid_sampler_3d_out(value out, value input, value grid, int64_t interpolation_mode, int64_t padding_mode, int align_corners);
value atg_group_norm(value input, int64_t num_groups, value weight, value bias, double eps, int cudnn_enabled);
value atg_gru(value input, value hx, value params, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional, int batch_first);
value atg_gru_cell(value input, value hx, value w_ih, value w_hh, value b_ih, value b_hh);
value atg_gru_data(value data, value batch_sizes, value hx, value params, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional);
value atg_gt(value self, value other);
value atg_gt_(value self, value other);
value atg_gt_scalar_out(value out, value self, value other);
value atg_gt_tensor(value self, value other);
value atg_gt_tensor_(value self, value other);
value atg_gt_tensor_out(value out, value self, value other);
value atg_hamming_window(int64_t window_length, int options_kind, int options_device);
value atg_hamming_window_out(value out, int64_t window_length);
value atg_hamming_window_periodic(int64_t window_length, int periodic, int options_kind, int options_device);
value atg_hamming_window_periodic_alpha(int64_t window_length, int periodic, double alpha, int options_kind, int options_device);
value atg_hamming_window_periodic_alpha_beta(int64_t window_length, int periodic, double alpha, double beta, int options_kind, int options_device);
value atg_hamming_window_periodic_alpha_beta_out(value out, int64_t window_length, int periodic, double alpha, double beta);
value atg_hamming_window_periodic_alpha_out(value out, int64_t window_length, int periodic, double alpha);
value atg_hamming_window_periodic_out(value out, int64_t window_length, int periodic);
value atg_hann_window(int64_t window_length, int options_kind, int options_device);
value atg_hann_window_out(value out, int64_t window_length);
value atg_hann_window_periodic(int64_t window_length, int periodic, int options_kind, int options_device);
value atg_hann_window_periodic_out(value out, int64_t window_length, int periodic);
value atg_hardshrink(value self, value lambd);
value atg_hardshrink_backward(value grad_out, value self, value lambd);
value atg_hardshrink_backward_grad_input(value grad_input, value grad_out, value self, value lambd);
value atg_hardshrink_out(value out, value self, value lambd);
value atg_hardsigmoid(value self);
value atg_hardsigmoid_(value self);
value atg_hardsigmoid_backward(value grad_output, value self);
value atg_hardsigmoid_backward_grad_input(value grad_input, value grad_output, value self);
value atg_hardsigmoid_out(value out, value self);
value atg_hardswish(value self);
value atg_hardswish_(value self);
value atg_hardswish_backward(value grad_output, value self);
value atg_hardswish_backward_out(value out, value grad_output, value self);
value atg_hardswish_out(value out, value self);
value atg_hardtanh(value self, value min_val, value max_val);
value atg_hardtanh_(value self, value min_val, value max_val);
value atg_hardtanh_backward(value grad_output, value self, value min_val, value max_val);
value atg_hardtanh_backward_grad_input(value grad_input, value grad_output, value self, value min_val, value max_val);
value atg_hardtanh_out(value out, value self, value min_val, value max_val);
value atg_heaviside(value self, value values);
value atg_heaviside_(value self, value values);
value atg_heaviside_out(value out, value self, value values);
value atg_hinge_embedding_loss(value self, value target, double margin, int64_t reduction);
value atg_histc(value self, int64_t bins, value min, value max);
value atg_histc_out(value out, value self, int64_t bins, value min, value max);
value atg_hsplit(value self, int64_t sections);
value atg_hsplit_array(value self, value indices);
value atg_hspmm(value mat1, value mat2);
value atg_hspmm_out(value out, value mat1, value mat2);
value atg_hstack(value tensors);
value atg_hstack_out(value out, value tensors);
value atg_huber_loss(value self, value target, int64_t reduction, double delta);
value atg_huber_loss_backward(value grad_output, value self, value target, int64_t reduction, double delta);
value atg_huber_loss_backward_out(value grad_input, value grad_output, value self, value target, int64_t reduction, double delta);