src/bindings/torch_bindings_generated3.ml


  let stubs_glu_backward_jvp =
    foreign
      "atg_glu_backward_jvp"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_glu_backward_jvp_out =
    foreign
      "atg_glu_backward_jvp_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_glu_jvp =
    foreign
      "atg_glu_jvp"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_glu_jvp_out =
    foreign
      "atg_glu_jvp_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_glu_out =
    foreign "atg_glu_out" (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_grad = foreign "atg_grad" (gc_tensor @-> returning raw_tensor)
  let stubs_greater = foreign "atg_greater" (gc_tensor @-> scalar @-> returning raw_tensor)

  let stubs_greater_ =
    foreign "atg_greater_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_greater_equal =
    foreign "atg_greater_equal" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_greater_equal_ =
    foreign "atg_greater_equal_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_greater_equal_scalar_out =
    foreign
      "atg_greater_equal_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_greater_equal_tensor =
    foreign "atg_greater_equal_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_greater_equal_tensor_ =
    foreign "atg_greater_equal_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_greater_equal_tensor_out =
    foreign
      "atg_greater_equal_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_greater_scalar_out =
    foreign
      "atg_greater_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_greater_tensor =
    foreign "atg_greater_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_greater_tensor_ =
    foreign "atg_greater_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_greater_tensor_out =
    foreign
      "atg_greater_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_grid_sampler =
    foreign
      "atg_grid_sampler"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_grid_sampler_2d =
    foreign
      "atg_grid_sampler_2d"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_grid_sampler_2d_out =
    foreign
      "atg_grid_sampler_2d_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_grid_sampler_3d =
    foreign
      "atg_grid_sampler_3d"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_grid_sampler_3d_out =
    foreign
      "atg_grid_sampler_3d_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_group_norm =
    foreign
      "atg_group_norm"
      (gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_gru =
    foreign
      "atg_gru"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> int
       @-> int64_t
       @-> double
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_gru_cell =
    foreign
      "atg_gru_cell"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_gru_data =
    foreign
      "atg_gru_data"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> int
       @-> int64_t
       @-> double
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_gt = foreign "atg_gt" (gc_tensor @-> scalar @-> returning raw_tensor)
  let stubs_gt_ = foreign "atg_gt_" (gc_tensor @-> scalar @-> returning raw_tensor)

  let stubs_gt_scalar_out =
    foreign
      "atg_gt_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_gt_tensor =
    foreign "atg_gt_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_gt_tensor_ =
    foreign "atg_gt_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_gt_tensor_out =
    foreign
      "atg_gt_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_hamming_window =
    foreign "atg_hamming_window" (int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_hamming_window_out =
    foreign "atg_hamming_window_out" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_hamming_window_periodic =
    foreign
      "atg_hamming_window_periodic"
      (int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_hamming_window_periodic_alpha =
    foreign
      "atg_hamming_window_periodic_alpha"
      (int64_t @-> int @-> double @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_hamming_window_periodic_alpha_beta =
    foreign
      "atg_hamming_window_periodic_alpha_beta"
      (int64_t @-> int @-> double @-> double @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_hamming_window_periodic_alpha_beta_out =
    foreign
      "atg_hamming_window_periodic_alpha_beta_out"
      (gc_tensor @-> int64_t @-> int @-> double @-> double @-> returning raw_tensor)
  ;;

  let stubs_hamming_window_periodic_alpha_out =
    foreign
      "atg_hamming_window_periodic_alpha_out"
      (gc_tensor @-> int64_t @-> int @-> double @-> returning raw_tensor)
  ;;

  let stubs_hamming_window_periodic_out =
    foreign
      "atg_hamming_window_periodic_out"
      (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_hann_window =
    foreign "atg_hann_window" (int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_hann_window_out =
    foreign "atg_hann_window_out" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_hann_window_periodic =
    foreign
      "atg_hann_window_periodic"
      (int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_hann_window_periodic_out =
    foreign
      "atg_hann_window_periodic_out"
      (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_hardshrink =
    foreign "atg_hardshrink" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_hardshrink_backward =
    foreign
      "atg_hardshrink_backward"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_hardshrink_backward_grad_input =
    foreign
      "atg_hardshrink_backward_grad_input"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_hardshrink_out =
    foreign
      "atg_hardshrink_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_hardsigmoid = foreign "atg_hardsigmoid" (gc_tensor @-> returning raw_tensor)
  let stubs_hardsigmoid_ = foreign "atg_hardsigmoid_" (gc_tensor @-> returning raw_tensor)

  let stubs_hardsigmoid_backward =
    foreign "atg_hardsigmoid_backward" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_hardsigmoid_backward_grad_input =
    foreign
      "atg_hardsigmoid_backward_grad_input"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_hardsigmoid_out =
    foreign "atg_hardsigmoid_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_hardswish = foreign "atg_hardswish" (gc_tensor @-> returning raw_tensor)
  let stubs_hardswish_ = foreign "atg_hardswish_" (gc_tensor @-> returning raw_tensor)

  let stubs_hardswish_backward =
    foreign "atg_hardswish_backward" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_hardswish_backward_out =
    foreign
      "atg_hardswish_backward_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_hardswish_out =
    foreign "atg_hardswish_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_hardtanh =
    foreign "atg_hardtanh" (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_hardtanh_ =
    foreign "atg_hardtanh_" (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_hardtanh_backward =
    foreign
      "atg_hardtanh_backward"
      (gc_tensor @-> gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_hardtanh_backward_grad_input =
    foreign
      "atg_hardtanh_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_hardtanh_out =
    foreign
      "atg_hardtanh_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_heaviside =
    foreign "atg_heaviside" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_heaviside_ =
    foreign "atg_heaviside_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_heaviside_out =
    foreign
      "atg_heaviside_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_hinge_embedding_loss =
    foreign
      "atg_hinge_embedding_loss"
      (gc_tensor @-> gc_tensor @-> double @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_histc =
    foreign
      "atg_histc"
      (gc_tensor @-> int64_t @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_histc_out =
    foreign
      "atg_histc_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_hsplit =
    foreign "atg_hsplit" (gc_tensor @-> int64_t @-> returning (ptr raw_tensor))
  ;;

  let stubs_hsplit_array =
    foreign
      "atg_hsplit_array"
      (gc_tensor @-> ptr int64_t @-> int @-> returning (ptr raw_tensor))
  ;;

  let stubs_hspmm = foreign "atg_hspmm" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_hspmm_out =
    foreign
      "atg_hspmm_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_hstack = foreign "atg_hstack" (ptr gc_tensor @-> int @-> returning raw_tensor)
end

module C3 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_hstack_out =
    foreign "atg_hstack_out" (gc_tensor @-> ptr gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_huber_loss =
    foreign
      "atg_huber_loss"
      (gc_tensor @-> gc_tensor @-> int64_t @-> double @-> returning raw_tensor)
  ;;

  let stubs_huber_loss_backward =
    foreign
      "atg_huber_loss_backward"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> double
       @-> returning raw_tensor)
  ;;

  let stubs_huber_loss_backward_out =
    foreign
      "atg_huber_loss_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> double
       @-> returning raw_tensor)
  ;;
